--- a/package.json
+++ b/package.json
@@ -20,14 +20,19 @@
   },
   "license": "MIT",
   "dependencies": {
+    "agenda": "^4.2.1",
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "helmet": "^5.0.2",
     "shortid": "^2.2.8",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
+    "@types/agenda": "^4.1.0",
     "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
     "@types/mongoose": "^5.11.97",
