Added complete docker setup to reverse proxy.

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,20 @@
 # Acme Diminuto Environment
-PORT=[PORT]
-DB_URI=[DB_URI]
-DNS_URI=[DNS_URI]
+# Database
+MONGODB_DATABASE="[Database Name]"
+MONGODB_ROOT_USER="[Root Database User]"
+MONGODB_ROOT_PASSWORD="[Root Database Password]"
+MONGODB_USER="[Non root Database User]"
+MONGODB_PASSWORD="[Non root Database Password]"
+MONGODB_LOCAL_PORT="[Database Local Port]"
+MONGODB_DOCKER_PORT="[Database Docker Port]"
+MONGODB_DOCKER_HOST="[Database Docker Host]"
+
+# Acme Diminuto API Sever
+NODE_LOCAL_PORT="[Node Local Port]"
+NODE_DOCKER_PORT="[Node Docker Port]"
+DNS_URI="[DNS URI]"
+
+# Proxy Server (Nginx)
+NGINX_LOCAL_PORT="[Nginx Local Port]"
+NGINX_DOCKER_PORT="[Nginx Docker Port]"
+NGINX_HOST="[Nginx Host]"
