--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^17.0.12",
     "@types/shortid": "^0.0.29",
     "@types/valid-url": "^1.0.3",
+    "dotenv": "^14.3.2",
     "eslint": "^8.7.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
