Added complete docker setup to reverse proxy added agenda for 60 day cleanup.

--- a/.env.template
+++ b/.env.template
@@ -8,10 +8,12 @@ MONGODB_PASSWORD="[Non root Database Password]"
 MONGODB_LOCAL_PORT="[Database Local Port]"
 MONGODB_DOCKER_PORT="[Database Docker Port]"
 MONGODB_DOCKER_HOST="[Database Docker Host]"
+MONGODB_DATABASE_AGENDA="[Database Agenda]"
 
 # Acme Diminuto API Sever
 NODE_LOCAL_PORT="[Node Local Port]"
 NODE_DOCKER_PORT="[Node Docker Port]"
+NODE_DOCKER_HOST="[Node Docker Host]"
 DNS_URI="[DNS URI]"
 
 # Proxy Server (Nginx)
