--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - MONGODB_USER=${MONGODB_USER}
       - MONGODB_PASSWORD=${MONGODB_PASSWORD}
       - MONGODB_DATABASE=${MONGODB_DATABASE}
+      - MONGODB_DATABASE_AGENDA=${MONGODB_DATABASE_AGENDA}
     networks:
       - acme-diminuto-network
 
@@ -24,13 +25,14 @@ services:
     image: nginx:1.21.6
     tty: true
     environment:
-      - NGINX_DOCKER_PORT=${NGINX_DOCKER_PORT}
       - NGINX_HOST=${NGINX_HOST}
+      - NODE_DOCKER_HOST=${NODE_DOCKER_HOST}
+      - NGINX_DOCKER_PORT=${NGINX_DOCKER_PORT}
       - NODE_DOCKER_PORT=${NODE_DOCKER_PORT}
     depends_on:
       - webapi
     ports:
-      - ${NGINX_LOCAL_PORT}:${NGINX_DOCKER_PORT}
+      - "${NGINX_LOCAL_PORT}:${NGINX_DOCKER_PORT}"
     volumes:
       - ./nginx/config:/etc/nginx/templates/
     restart: unless-stopped
