--- a/nginx/config/diminuto.conf.template
+++ b/nginx/config/diminuto.conf.template
@@ -6,10 +6,12 @@ server {
     access_log /var/log/nginx/access.log;
 
     location / {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_pass http://webapi:${NODE_DOCKER_PORT};
+        proxy_set_header Host \$host;
+        proxy_set_header X-Real-IP \$remote_addr;
+        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto \$scheme;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
+        proxy_pass  http://${NODE_DOCKER_HOST}:${NODE_DOCKER_PORT};
     }
 }
