--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "helmet": "^5.0.2",
+    "mongodb": "^4.3.1",
+    "mongoose": "^6.1.8",
     "shortid": "^2.2.8",
     "valid-url": "^1.0.9"
   },
@@ -35,8 +37,9 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
+    "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^17.0.12",
+    "@types/node": "^16.11.21",
     "@types/shortid": "^0.0.29",
     "@types/valid-url": "^1.0.3",
     "dotenv": "^14.3.2",
