General cleanup of variables. Added php_curl client example.

--- a/.env.template
+++ b/.env.template
@@ -1,22 +1,22 @@
 # Acme Diminuto Environment
 # Database
-MONGODB_DATABASE="[Database Name]"
-MONGODB_ROOT_USER="[Root Database User]"
-MONGODB_ROOT_PASSWORD="[Root Database Password]"
-MONGODB_USER="[Non root Database User]"
-MONGODB_PASSWORD="[Non root Database Password]"
-MONGODB_LOCAL_PORT="[Database Local Port]"
-MONGODB_DOCKER_PORT="[Database Docker Port]"
-MONGODB_DOCKER_HOST="[Database Docker Host]"
-MONGODB_DATABASE_AGENDA="[Database Agenda]"
+MONGODB_DATABASE="Replace with your database name for database"
+MONGODB_ROOT_USER="Replace with your root user name for the database"
+MONGODB_ROOT_PASSWORD="Replace with your root password for the database"
+MONGODB_USER="Replace with your user name for the database"
+MONGODB_PASSWORD="Replace with your password for database user"
+MONGODB_LOCAL_PORT="Replace with your local port for database"
+MONGODB_PORT="Replace with your port for database access"
+MONGODB_HOST="Replace with your host for database access"
+MONGODB_AGENDA_DATABASE="Replace with your agenda database name"
 
 # Acme Diminuto API Sever
-NODE_LOCAL_PORT="[Node Local Port]"
-NODE_DOCKER_PORT="[Node Docker Port]"
-NODE_DOCKER_HOST="[Node Docker Host]"
-DNS_URI="[DNS URI]"
+NODE_LOCAL_PORT="Replace with your local port"
+NODE_PORT="Replace with your port for the API server"
+NODE_HOST="Replace with your host for the API server"
+DNS_URI="Replace with your DNS URI for the API server"
 
 # Proxy Server (Nginx)
-NGINX_LOCAL_PORT="[Nginx Local Port]"
-NGINX_DOCKER_PORT="[Nginx Docker Port]"
-NGINX_HOST="[Nginx Host]"
+NGINX_LOCAL_PORT="Replace with your local port the proxy server"
+NGINX_PORT="Replace with your port to the proxy server"
+NGINX_HOST="Replace with your host for the proxy server"
