--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,19 @@ services:
     container_name: acme-diminuto-mongodb
     image: mongo:5.0.5
     ports:
-      - ${MONGODB_LOCAL_PORT}:${MONGODB_DOCKER_PORT}
+      - ${MONGODB_LOCAL_PORT}:${MONGODB_PORT}
     volumes:
-      - mongodbdata01:/data/db
       - ./mongodb/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
-    restart: unless-stopped
+      - diminutodata01:/data/db
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGODB_ROOT_USER}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGODB_ROOT_PASSWORD}
       - MONGO_INITDB_DATABASE=${MONGODB_DATABASE}
+      - MONGODB_DATABASE=${MONGODB_DATABASE}
       - MONGODB_USER=${MONGODB_USER}
       - MONGODB_PASSWORD=${MONGODB_PASSWORD}
-      - MONGODB_DATABASE=${MONGODB_DATABASE}
-      - MONGODB_DATABASE_AGENDA=${MONGODB_DATABASE_AGENDA}
+      - MONGODB_AGENDA_DATABASE=${MONGODB_AGENDA_DATABASE}
+    restart: unless-stopped
     networks:
       - acme-diminuto-network
 
@@ -26,13 +26,13 @@ services:
     tty: true
     environment:
       - NGINX_HOST=${NGINX_HOST}
-      - NODE_DOCKER_HOST=${NODE_DOCKER_HOST}
-      - NGINX_DOCKER_PORT=${NGINX_DOCKER_PORT}
-      - NODE_DOCKER_PORT=${NODE_DOCKER_PORT}
+      - NODE_HOST=${NODE_HOST}
+      - NGINX_PORT=${NGINX_PORT}
+      - NODE_PORT=${NODE_PORT}
     depends_on:
       - webapi
     ports:
-      - "${NGINX_LOCAL_PORT}:${NGINX_DOCKER_PORT}"
+      - "${NGINX_LOCAL_PORT}:${NGINX_PORT}"
     volumes:
       - ./nginx/config:/etc/nginx/templates/
     restart: unless-stopped
@@ -51,7 +51,7 @@ services:
     depends_on:
       - mongodb
     expose:
-      - ${NODE_DOCKER_PORT}
+      - ${NODE_PORT}
     command: "npm start"
     volumes:
       - .:/app
@@ -62,5 +62,5 @@ networks:
   acme-diminuto-network:
     driver: bridge
 volumes:
-  mongodbdata01:
+  diminutodata01:
     driver: local
